--- a/functions.Rmd
+++ b/functions.Rmd
@@ -21,14 +21,14 @@ where the definition starts.
 
 ```{r, eval = FALSE}
 # Good
-long_function_name <- function(a = "a long argument",
+long_function_name = function(a = "a long argument",
                                b = "another argument",
                                c = "another long argument") {
   # As usual code is indented by two spaces.
 }
 
 # Bad
-long_function_name <- function(a = "a long argument",
+long_function_name = function(a = "a long argument",
   b = "another argument",
   c = "another long argument") {
   # Here it's hard to spot where the definition ends and the
@@ -43,18 +43,18 @@ of the last evaluated expression.
 
 ```{r eval = FALSE}
 # Good
-find_abs <- function(x) {
+find_abs = function(x) {
   if (x > 0) {
     return(x)
   }
   x * -1
 }
-add_two <- function(x, y) {
+add_two = function(x, y) {
   x + y
 }
 
 # Bad
-add_two <- function(x, y) {
+add_two = function(x, y) {
   return(x + y)
 }
 ```
@@ -63,7 +63,7 @@ Return statements should always be on their own line because they have important
 
 ```{r, eval = FALSE}
 # Good
-find_abs <- function(x) {
+find_abs = function(x) {
   if (x > 0) {
     return(x)
   }
@@ -71,7 +71,7 @@ find_abs <- function(x) {
 }
 
 # Bad
-find_abs <- function(x) {
+find_abs = function(x) {
   if (x > 0) return(x)
   x * -1
 }
@@ -83,7 +83,7 @@ This makes it possible to use the function as part of a pipe. `print` methods
 should usually do this, like this example from [httr](http://httr.r-lib.org/):
 
 ```{r eval = FALSE}
-print.url <- function(x, ...) {
+print.url = function(x, ...) {
   cat("Url: ", build_url(x), "\n", sep = "")
   invisible(x)
 }
@@ -98,13 +98,13 @@ of a comment should begin with the comment symbol and a single space: `# `.
 # Good
 
 # Objects like data frames are treated as leaves
-x <- map_if(x, is_bare_list, recurse)
+x = map_if(x, is_bare_list, recurse)
 
 
 # Bad
 
 # Recurse only with bare lists
-x <- map_if(x, is_bare_list, recurse)
+x = map_if(x, is_bare_list, recurse)
 ```
 
 Comments should be in sentence case, and only end with a full stop if they
@@ -114,18 +114,18 @@ contain at least two sentences:
 # Good
 
 # Objects like data frames are treated as leaves
-x <- map_if(x, is_bare_list, recurse)
+x = map_if(x, is_bare_list, recurse)
 
 # Do not use `is.list()`. Objects like data frames must be treated
 # as leaves.
-x <- map_if(x, is_bare_list, recurse)
+x = map_if(x, is_bare_list, recurse)
 
 
 # Bad
 
 # objects like data frames are treated as leaves
-x <- map_if(x, is_bare_list, recurse)
+x = map_if(x, is_bare_list, recurse)
 
 # Objects like data frames are treated as leaves.
-x <- map_if(x, is_bare_list, recurse)
+x = map_if(x, is_bare_list, recurse)
 ```
