--- a/package-files.Rmd
+++ b/package-files.Rmd
@@ -26,7 +26,7 @@ in packages.
 
 ```{r}
 # Bad
-help_compute <- function() {
+help_compute = function() {
   # ... Lots of code ...
 }
 
@@ -35,7 +35,7 @@ help_compute <- function() {
 #' This is where the documentation of my function begins.
 #' ...
 #' @export
-do_something_cool <- function() {
+do_something_cool = function() {
   # ... even more code ...
   help_compute()
 }
@@ -51,13 +51,13 @@ NULL
 
 #' @describeIn something-cool Get the mean
 #' @export
-get_cool_mean <- function(x) {
+get_cool_mean = function(x) {
   # ...
 }
 
 #' @describeIn something-cool Get the sum
 #' @export
-get_cool_sum <- function(x) {
+get_cool_sum = function(x) {
   # ...
 }
 ```
