--- a/pipes.Rmd
+++ b/pipes.Rmd
@@ -72,8 +72,8 @@ x %>%
   left_join(y %>% select(a, b, v), by = c("a", "b"))
 
 # Better
-x_join <- x %>% select(a, b, w)
-y_join <- y %>% select(a, b, v)
+x_join = x %>% select(a, b, w)
+y_join = y %>% select(a, b, v)
 left_join(x_join, y_join, by = c("a", "b"))
 ```
 
@@ -100,7 +100,7 @@ There are three acceptable forms of assignment:
 *   Variable name and assignment on separate lines:
 
     ```{r, eval = FALSE}
-    iris_long <-
+    iris_long =
       iris %>%
       gather(measure, value, -Species) %>%
       arrange(-value)
@@ -109,29 +109,16 @@ There are three acceptable forms of assignment:
 *   Variable name and assignment on the same line:
 
     ```{r, eval = FALSE}
-    iris_long <- iris %>%
+    iris_long = iris %>%
       gather(measure, value, -Species) %>%
       arrange(-value)
     ```
-
-*   Assignment at the end of the pipe with `->`:
-
-    ```{r, eval = FALSE}
-    iris %>%
-      gather(measure, value, -Species) %>%
-      arrange(-value) ->
-      iris_long
-    ```
-    
-    I think this is the most natural to write, but makes reading a little
-    harder: when the name comes first, it can act as a heading to remind
-    you of the purpose of the pipe.
 
 The magrittr package provides the `%<>%` operator as a shortcut for modifying an object in place. Avoid this operator.
 
 ```{r, eval = FALSE}
 # Good
-x <- x %>% 
+x = x %>% 
   abs() %>% 
   sort()
   
