--- a/functions.Rmd
+++ b/functions.Rmd
@@ -38,7 +38,7 @@ long_function_name = function(a = "a long argument",
 
 ## `return()`
 
-Only use `return()` for early returns. Otherwise, rely on R to return the result 
+Use `return()`.  Do not rely on R to return the result 
 of the last evaluated expression.
 
 ```{r eval = FALSE}
@@ -47,15 +47,15 @@ find_abs = function(x) {
   if (x > 0) {
     return(x)
   }
-  x * -1
+  return(x * -1)
 }
 add_two = function(x, y) {
-  x + y
+  return(x + y)
 }
 
 # Bad
 add_two = function(x, y) {
-  return(x + y)
+  x + y
 }
 ```
 
